# suika3

./: .gitignore  .gitmodules  BUGS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFESTO.md  NOTICE  PULL_REQUEST_TEMPLATE.md  README.ja.md  README.md  TODO.md  configure
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: android-apk.yml  release.yml
cmake/modules/: FindNoct.cmake  FindPlayfield.cmake  FindStratoHAL.cmake
cmake/toolchains/: ios-device.cmake  linux-x86_64.cmake  macos.cmake  mingw-x86.cmake  openwatcom-dos4gw-override.cmake  openwatcom-dos4gw.cmake  unity-ps5.cmake  unity-switch.cmake  unity-win64.cmake  unity-xbox.cmake  wasm.cmake
debian/: changelog  control  rules
docs/management/: FEATURE-REQUESTS.md
docs/mkdocs-en/: mkdocs.yml
docs/mkdocs-en/docs/: anime.md  aot.md  api.md  build.md  c-api.md  design.md  eye-blink.md  getting-started.md  gettingstarted.md  gui.md  index.md  intro.md  lip-sync.md  novelml-syntax.md  novelml-tags.md  nvl-mode.md  plugin.md  sysmenu.md  tag.md
docs/mkdocs-ja/: mkdocs.yml
docs/mkdocs-ja/docs/: api.md  build.md  distribute.md  index.md  intro.md  novelml-syntax.md  plugin.md  porting.md  suikascript-syntax.md
docs/mkdocs-zh-Hans/docs/: anime.md  design.md  gui.md  novelml-tags.md  nvl-mode.md
docs/readme/: hajimeni.txt  readme.txt
game/: config.ini  game.ini  main.pf  main.ray  start.novel
game/gui/title/: title.gui
game/plugins/testplugin/: testplugin.pf
game/system/choose/: hover.anime  idle.anime
game/system/config/: config.gui  config.txt
game/system/history/: history.gui
game/system/load/: load.gui
game/system/message/: msgbox-hide.anime  msgbox-show.anime  namebox-hide.anime  namebox-show.anime
game/system/save/: save-page-active.anime  save-page-hover.anime  save-page-idle.anime  save.gui
game/system/sysmenu/: sysmenu.gui
game/system/title/: title.gui
include/playfield/: c89compat.h  playfield.h
include/suika3/: c89compat.h  suika3.h
locale/de/LC_MESSAGES/: suika3.mo
locale/el/LC_MESSAGES/: libnoct.mo  suika3.mo
locale/en/LC_MESSAGES/: suika3.mo
locale/es/LC_MESSAGES/: suika3.mo
locale/fr/LC_MESSAGES/: libnoct.mo  suika3.mo
locale/it/LC_MESSAGES/: libnoct.mo  suika3.mo
locale/ja/LC_MESSAGES/: suika3.mo
locale/ru/LC_MESSAGES/: libnoct.mo  suika3.mo
locale/zh_CN/LC_MESSAGES/: libnoct.mo  suika3.mo
locale/zh_TW/LC_MESSAGES/: suika3.mo
resources/: assets.arc
resources/android/: AndroidManifest.xml  module.json  prefab.json
resources/clang-include/: malloc.h  math.h  stdbool.h  string.h
resources/elisp/: novelml-mode.el  ray-mode.el
resources/flatpak/: vn.suika3.engine.metainfo.xml  vn.suika3.engine.yml
resources/freedesktop/: icon.c  suika3-launcher  suika3-run.sh  vn.suika3.engine.desktop  vn.suika3.engine.xml
resources/i18n/: make_mo.sh  make_po.py  make_translation.py  message.txt  translation.c
resources/i18n/po_files/: de.po  el.po  en.po  es.po  fr.po  it.po  ja.po  ru.po  tw.po  zh.po
resources/launcher/: main.ray  start.novel
resources/linux/: AppRun  suika3-run.sh  suika3-wrapper.sh  vn.suika3.engine.metainfo.xml  vn.suika3.engine.yml
resources/macos/: suika3-wrapper.sh
resources/manpage/: playfield-aotc.1  playfield-aotc.1.mdoc  playfield-compiler.1  playfield-pack.1.mdoc  suika3-aotc.1  suika3-aotc.1.mdoc  suika3-bcc.1  suika3-bcc.1.mdoc  suika3-compiler.1  suika3-compiler.1.mdoc  suika3-launcher.1  suika3-launcher.1.mdoc  suika3-pack.1  suika3-pack.1.mdoc  suika3-run.1  suika3-run.1.mdoc  suika3.1  suika3.1.mdoc
resources/msvc-include/: errno.h  float.h  limits.h  math.h  memory.h  unistd.h
resources/novel/: start.tag
resources/projects/android/: build.sh
resources/projects/android/app/: build.gradle
resources/projects/android/app/src/main/cpp/: CMakeLists.txt
resources/projects/android/app/src/main/res/values/: strings.xml
resources/projects/ios/: ExportOptions.plist  build.sh
resources/projects/ios/Game/: main.m
resources/projects/ios/Game.xcodeproj/: project.pbxproj
resources/projects/macos/Game.xcodeproj/: project.pbxproj
resources/projects/openharmony/entry/src/main/cpp/: CMakeLists.txt  FindSuika3.cmake  library.c
resources/projects/qt/: build.sh
resources/windows/: aotcomp-resource.rc  bytecomp-resource.rc  manifest.xml  pack-resource.rc  resource.rc  web-resource.rc
src/: anime.c  anime.h  aot.c  api.c  api.h  cmd.c  cmd.h  cmd_anime.c  cmd_bg.c  cmd_bgm.c  cmd_callmacro.c  cmd_ch.c  cmd_chapter.c  cmd_choose.c  cmd_click.c  cmd_config.c  cmd_defmacro.c  cmd_else.c  cmd_elseif.c  cmd_endif.c  cmd_endmacro.c  cmd_goto.c  cmd_gui.c  cmd_if.c  cmd_label.c  cmd_layer.c  cmd_load.c  cmd_move.c  cmd_pencil.c  cmd_returnmacro.c  cmd_se.c  cmd_set.c  cmd_skip.c  cmd_text.c  cmd_video.c  cmd_volume.c  cmd_wait.c  command.h  command_bg.c  command_click.c  (+48 more)
